Added top story to homepage

--- a/index.qmd
+++ b/index.qmd
@@ -12,6 +12,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
+    - "!AI-screening.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -104,10 +105,28 @@ listing:
     feed: false
 toc: false
 ---
+::: {.content-container}
+::: {.top-story .purple-background}
+<a href="/viewpoints/editors-blog/posts/2023/03/15/AI-screening.qmd" padding="none">
 
-::: {.header-banner .header-image}
-![](images/nasa-Q1p7bh3SHj8-unsplash-crop.png)
+::: grid
+::: {.g-col-12 .g-col-lg-4 .top-story-text}
+## OpenAI’s text classifier won’t calm fears about AI-written homework
+Educators are worried about ChatGPT being using by students for homework assignments, so OpenAI has released a tool to classify whether text is human- or AI-written. But relying on the classifier’s results is ill-advised, as some basic statistics shows.
 :::
+::: {.g-col-12 .g-col-lg-8}
+![](viewpoints/editors-blog/posts/2023/03/15/images/teacher-marking-homework.png)
+:::
+:::
+
+</a>
+
+:::
+:::
+
+<!-- ::: {.header-banner .header-image}
+![](images/nasa-Q1p7bh3SHj8-unsplash-crop.png)
+::: -->
 
 ::: {.header-text} 
 ::: {.content-container}
