--- a/index.qmd
+++ b/index.qmd
@@ -107,7 +107,7 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/03/15/AI-screening.qmd" padding="none">
+<a href="/viewpoints/editors-blog/posts/2023/03/15/AI-screening.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
