homepage and latest content done

--- a/index.qmd
+++ b/index.qmd
@@ -138,7 +138,10 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 
 ::: {.content-container}
 ::: {.listing-block}
+<a href="latest-content.qmd">
+
 ## Latest content 
+</a>
 
 ::: {#latest-content}
 :::
@@ -151,8 +154,8 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## It is arbitrary how we choose to model a situation. There are infinitely many different ways that you could choose to simplify reality -- this huge, messy, complex thing in front of us
-Erica Thompson on how to *Escape from Model Land*
+## It is arbitrary how we choose to model a situation. There are infinitely many different ways that you could choose to simplify reality -- this huge, messy, complex thing in front of us.
+Erica Thompson on the ethics of modelling
 
 ::: {.button .button1}
 [Watch the interview](viewpoints/interviews/posts/01/25/erica-thompson.qmd)
@@ -164,7 +167,10 @@ Erica Thompson on how to *Escape from Model Land*
 
 ::: {.content-container}
 ::: {.listing-block}
+<a href="ideas/datasciencebites/index.qmd">
+
 ## Data Science Bites 
+</a>
 
 ::: {#datasciencebites}
 :::
@@ -174,7 +180,10 @@ Erica Thompson on how to *Escape from Model Land*
 
 ::: {.content-container}
 ::: {.listing-block}
-## Editors' Blog 
+<a href="viewpoints/editors-blog/index.qmd">
+
+## Editors' Blog
+</a> 
 
 ::: {#editors-blog}
 :::
@@ -182,9 +191,28 @@ Erica Thompson on how to *Escape from Model Land*
 :::
 :::
 
+::: {.pullout-text}
+::: {.pullout-container}
+::: {.pullout-block .black-background}
+![](images/quote-purple.png){width="100px"}
+
+## Data tell our stories, and they reflect what’s happening in our world today. A way to think about data science education is to think about what we need our data understanding to be at each point in time in our educational career, or in our lives.
+Anna Bargagliotti on the US Data Science and Literacy Act
+
+::: {.button .button1}
+[Watch the interview](viewpoints/interviews/posts/03/06/data-science-act.qmd)
+:::
+
+:::
+:::
+:::
+
 ::: {.content-container}
 ::: {.listing-block}
-## Interviews 
+<a href="viewpoints/interviews/index.qmd">
+
+## Interviews
+</a> 
 
 ::: {#interviews}
 :::
