--- a/case-studies/index.qmd
+++ b/case-studies/index.qmd
@@ -14,4 +14,4 @@ subtitle: How data science is used to solve real-world problems in business, pub
 #   page-size: 10
 #   feed: true
 ---
-
+Our case study content is in development. Interested in contributing a case study to Real World Data Science? [Check out our call for contributions](/contributor-docs/call-for-contributions.qmd). 
