--- a/ideas/datasciencebites/index.qmd
+++ b/ideas/datasciencebites/index.qmd
@@ -8,6 +8,7 @@ listing:
   categories: true
   sort-ui: false
   filter-ui: false
+  page-size: 12
 comments: false
 aliases: 
   - /news-and-views/datasciencebites/index.qmd
