--- a/ideas/index.qmd
+++ b/ideas/index.qmd
@@ -1,16 +1,16 @@
 ---
 title: Ideas
-subtitle: Explore the concepts, tools and methods that make data science possible
+subtitle: "The concepts, tools and methods that make data science possible. In this section: [DataScienceBites](datasciencebites/index.qmd)"
 listing:
   contents: 
   - datasciencebites
   - "!index.qmd"
   sort: "date desc"
-  type: default
+  type: grid
   categories: true
   sort-ui: false
   filter-ui: false
-  page-size: 10
+  page-size: 30
   feed: true
 ---
 
