--- a/careers/index.qmd
+++ b/careers/index.qmd
@@ -1,6 +1,7 @@
 ---
+pagetitle: Careers | Real World Data Science
 title: Careers
-subtitle: Coming soon  
+subtitle: Insight, advice and guidance on how to succeed in data science 
 # listing:
 #   contents: 
 #   - editors-blog
@@ -14,4 +15,4 @@ subtitle: Coming soon
 #   page-size: 10
 #   feed: true
 ---
-
+Our careers content is in development. Interested in contributing to Real World Data Science? [Check out our call for contributions](/contributor-docs/call-for-contributions.qmd). 
