--- a/case-studies/index.qmd
+++ b/case-studies/index.qmd
@@ -1,4 +1,5 @@
 ---
+pagetitle: Case studies | Real World Data Science
 title: Case studies
 subtitle: How data science is used to solve real-world problems in business, public policy and beyond  
 # listing:
