--- a/ideas/datasciencebites/index.qmd
+++ b/ideas/datasciencebites/index.qmd
@@ -1,4 +1,5 @@
 ---
+pagetitle: DataScienceBites | Ideas | Real World Data Science
 title: Data Science Bites
 subtitle: Digests of new papers in the data science literature
 listing:
