--- a/ideas/index.qmd
+++ b/ideas/index.qmd
@@ -1,4 +1,5 @@
 ---
+pagetitle: Ideas | Real World Data Science
 title: Ideas
 subtitle: "The concepts, tools and methods that make data science possible. In this section: [DataScienceBites](datasciencebites/index.qmd)"
 listing:
