--- a/viewpoints/editors-blog/index.qmd
+++ b/viewpoints/editors-blog/index.qmd
@@ -1,5 +1,5 @@
 ---
-pagetitle: Editors' Blog | Real World Data Science
+pagetitle: Editors' Blog | Viewpoints | Real World Data Science
 title: Editors' blog
 subtitle: News, updates, and discussions from the Editorial Board
 listing:
@@ -9,6 +9,7 @@ listing:
   categories: true
   sort-ui: false
   filter-ui: false
+  page-size: 12
 comments: false
 ---
 
