--- a/viewpoints/index.qmd
+++ b/viewpoints/index.qmd
@@ -1,7 +1,7 @@
 ---
 pagetitle: Viewpoints | Real World Data Science
 title: Viewpoints
-subtitle: Critical perspectives on the stories, themes, challenges and opportunities shaping data science  
+subtitle: "Critical perspectives on the stories, themes, challenges and opportunities shaping data science. In this section: [Editors' blog](editors-blog/index.qmd) | [Interviews](interviews/index.qmd) | [Newsletter](newsletter/index.qmd)"
 listing:
   contents: 
   - editors-blog
@@ -9,9 +9,9 @@ listing:
   - "!index.qmd"
   sort: "date desc"
   type: grid
-  categories: false
+  categories: true
   sort-ui: false
   filter-ui: false
-  page-size: 12
+  page-size: 30
   feed: true
 ---
