--- a/viewpoints/interviews/index.qmd
+++ b/viewpoints/interviews/index.qmd
@@ -1,5 +1,5 @@
 ---
-pagetitle: Interviews | Real World Data Science
+pagetitle: Interviews | Viewpoints | Real World Data Science
 title: Interviews
 subtitle: Deep dives with data scientists on hot topics and burning issues
 listing:
@@ -9,6 +9,7 @@ listing:
   categories: true
   sort-ui: false
   filter-ui: false
+  page-size: 12
 comments: false
 ---
 
