--- a/viewpoints/interviews/posts/02/03/heidi-seibold.qmd
+++ b/viewpoints/interviews/posts/02/03/heidi-seibold.qmd
@@ -9,7 +9,9 @@ author: Brian Tarran
 date: 02/03/2023 
 toc: true 
 image: images/heidi-seibold.png 
-image-alt: Photo of Heidi Seibold 
+image-alt: Photo of Heidi Seibold
+aliases:
+  - /news-and-views/interviews/posts/02/03/heidi-seibold.html
 --- 
 Years are often dedicated to different causes and aims by different organisations. The United Nations, for example, has designated 2023 the [International Year of Dialogue as a Guarantee of Peace](https://www.undocs.org/en/A/RES/77/32), while for the European Commission it is the [European Year of Skills](https://ec.europa.eu/commission/presscorner/detail/en/ip_22_6086). But over at the White House Office of Science and Technology Policy, 2023 has been declared the [Year of Open Science](https://www.whitehouse.gov/ostp/news-updates/2023/01/11/fact-sheet-biden-harris-administration-announces-new-actions-to-advance-open-and-equitable-research/). 
 
@@ -132,7 +134,23 @@ Yeah, thank you so much for having me. It was wonderful. And I always like talki
 **Brian Tarran**   
 Excellent. Excellent. Well, thank you again. And thank you to those of you who are tuning in today. Make sure to check realworlddatascience.net for more interviews. Take care.
 
-###### **&larr; Back to [Interviews](/news-and-views/interviews/index.qmd)**
+::: {.article-btn}
+[Back to Interviews](/viewpoints/interviews/index.qmd)
+:::
 
----
-<p xmlns:cc="http://creativecommons.org/ns#" >This work is licensed under <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a></p>
+::: {.further-info}
+::: grid
+::: {.g-col-12 .g-col-md-6}
+Copyright and licence
+: &copy; 2023 Royal Statistical Society
+
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This work is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>, except where otherwise noted.
+
+:::
+
+::: {.g-col-12 .g-col-md-6}
+How to cite
+: Tarran, Brian. 2023. "Why open science is ‘just good science in a digital era’." Real World Data Science, February 3, 2023. [URL](https://realworlddatascience.net/news-and-views/interviews/posts/02/03/heidi-seibold.html)
+:::
+:::
+:::
