--- a/viewpoints/interviews/posts/01/25/erica-thompson.qmd
+++ b/viewpoints/interviews/posts/01/25/erica-thompson.qmd
@@ -10,6 +10,8 @@ date: 01/25/2023
 toc: true
 image: images/erica-thompson.png
 image-alt: Photo of Erica Thompson
+aliases: 
+  - /news-and-views/interviews/posts/01/25/erica-thompson.html
 ---
 Erica Thompson’s new book, [*Escape from Model Land*](http://www.ericathompson.co.uk/books/), offers a fascinating and important perspective on mathematical models as being not just models of the real world, or real processes or systems, but also “subjective versions of reality” that encode all sorts of assumptions and value judgements. 
 
@@ -140,7 +142,23 @@ Excellent, excellent. Well, I wish you the best of luck with the book. As I say,
 **Erica Thompson**  
 Thank you very much. Thanks for having me.
 
-###### **&larr; Back to [Interviews](/news-and-views/interviews/index.qmd)**
+::: {.article-btn}
+[Back to Interviews](/viewpoints/interviews/index.qmd)
+:::
 
----
-<p xmlns:cc="http://creativecommons.org/ns#" >This work is licensed under <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a></p>
+::: {.further-info}
+::: grid
+::: {.g-col-12 .g-col-md-6}
+Copyright and licence
+: &copy; 2023 Royal Statistical Society
+
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This work is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>, except where otherwise noted.
+
+:::
+
+::: {.g-col-12 .g-col-md-6}
+How to cite
+: Tarran, Brian. 2023. "How to ‘Escape from Model Land’: an interview with Erica Thompson." Real World Data Science, January 25, 2023. [URL](https://realworlddatascience.net/news-and-views/interviews/posts/01/25/erica-thompson.html)
+:::
+:::
+:::
