2023 ed blog articles repointed

--- a/viewpoints/editors-blog/posts/2023/01/18/rwds-at-rss-conference.qmd
+++ b/viewpoints/editors-blog/posts/2023/01/18/rwds-at-rss-conference.qmd
@@ -9,7 +9,9 @@ author: Brian Tarran
 date: 01/18/2023
 toc: true
 image: images/rss-conf23.png
-image-alt: Flyer for RSS International Conference 2023, for all statisticians and data scientists. Taking place in Harrogate, 4-7 September 2023. 
+image-alt: Flyer for RSS International Conference 2023, for all statisticians and data scientists. Taking place in Harrogate, 4-7 September 2023.
+aliases: 
+  - /news-and-views/editors-blog/posts/2023/01/18/rwds-at-rss-conference.html 
 ---
 Real World Data Science has booked its first conference appearance! This September, we’ll be part of the data science stream of the [RSS International Conference](https://rss.org.uk/training-events/conference-2023/).
 
@@ -27,8 +29,23 @@ The conference takes place 4-7 September 2023, in Harrogate, Yorkshire. [Keynote
 See the [RSS International Conference 2023 website](https://rss.org.uk/training-events/conference-2023/) for more details.
 
 ::: {.article-btn}
-[Back to Editors' blog](/news-and-views/editors-blog/index.qmd)
+[Back to Editors' blog](/viewpoints/editors-blog/index.qmd)
 :::
 
----
-<p xmlns:cc="http://creativecommons.org/ns#" >This work is licensed under <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a></p>
+
+::: {.further-info}
+::: grid
+::: {.g-col-12 .g-col-md-6}
+Copyright and licence
+: &copy; 2023 Royal Statistical Society
+
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This work is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>, except where otherwise noted.
+
+:::
+
+::: {.g-col-12 .g-col-md-6}
+How to cite
+: Tarran, Brian. 2023. "We’re taking Real World Data Science on the road." Real World Data Science, January, 18 2023. [URL](https://realworlddatascience.net/news-and-views/editors-blog/posts/2023/01/18/rwds-at-rss-conference.html)
+:::
+:::
+:::
