--- a/viewpoints/editors-blog/posts/2023/01/27/talking-chatgpt.qmd
+++ b/viewpoints/editors-blog/posts/2023/01/27/talking-chatgpt.qmd
@@ -11,6 +11,8 @@ date: 01/27/2023
 toc: true
 image: images/Detlef.png
 image-alt: Photo of Detlef Nauck
+aliases: 
+  - /news-and-views/editors-blog/posts/2023/01/27/talking-chatgpt.html
 ---
 ChatGPT is, right now, the world's most popular - and controversial - chatbot. Users have been both wowed by its capabilities[^1] and concerned by the confident-sounding nonsense it can produce. 
 
@@ -107,10 +109,25 @@ Is there a recent data science story you'd like our team to discuss? Do you have
 :::
 
 ::: {.article-btn}
-[Back to Editors' blog](/news-and-views/editors-blog/index.qmd)
+[Back to Editors' blog](/viewpoints/editors-blog/index.qmd)
 :::
 
----
-<p xmlns:cc="http://creativecommons.org/ns#" >This work is licensed under <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a></p>
+
+::: {.further-info}
+::: grid
+::: {.g-col-12 .g-col-md-6}
+Copyright and licence
+: &copy; 2023 Royal Statistical Society
+
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This work is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>, except where otherwise noted.
+
+:::
+
+::: {.g-col-12 .g-col-md-6}
+How to cite
+: Tarran, Brian. 2023. "ChatGPT can hold a conversation, but lacks knowledge representation and original sources for verification." Real World Data Science, January, 27 2023. [URL](https://realworlddatascience.net/news-and-views/editors-blog/posts/2023/01/27/talking-chatgpt.html)
+:::
+:::
+:::
 
 [^1]: I asked ChatGPT to write this article's headline, for example. I typed in "Can you write a headline for this text:" and then copy/pasted the interview transcript into the dialogue box. It first came up with, "AI Chatbot ChatGPT Proves Capable in Sustaining Conversations but Lacks Knowledge Representation and Original Sources for Verification". I then asked it to shorten the headline to 10 words. It followed up with, "ChatGPT: Large Language Model-Driven Chatbot Proves Capable But Limited".
