--- a/viewpoints/editors-blog/posts/2023/02/14/digital-skills.qmd
+++ b/viewpoints/editors-blog/posts/2023/02/14/digital-skills.qmd
@@ -13,6 +13,8 @@ date: 02/14/2023
 toc: true
 image: images/billetto-editorial-YvLd3xbo0ac-unsplash.jpg
 image-alt: Woman painting while wearing virtual reality headset. Photo by Billetto Editorial on Unsplash.
+aliases: 
+  - /news-and-views/editors-blog/posts/2023/02/14/digital-skills.html
 ---
 Digital skills. We all need them. Employers say they want them, but there aren’t enough to go around. Supply can’t meet demand, so we’re left with a gap -- a digital skills gap. But what are *digital skills* exactly?  
 
@@ -58,8 +60,23 @@ Is there a recent data science story you'd like our team to discuss? Do you have
 :::
 
 ::: {.article-btn}
-[Back to Editors' blog](/news-and-views/editors-blog/index.qmd)
+[Back to Editors' blog](/viewpoints/editors-blog/index.qmd)
 :::
 
----
-<p xmlns:cc="http://creativecommons.org/ns#" >This work is licensed under <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a></p>
+
+::: {.further-info}
+::: grid
+::: {.g-col-12 .g-col-md-6}
+Copyright and licence
+: &copy; 2023 Royal Statistical Society
+
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This work is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>, except where otherwise noted.
+
+:::
+
+::: {.g-col-12 .g-col-md-6}
+How to cite
+: Tarran, Brian. 2023. "Data science can help close the ‘digital skills’ gap, or so it seems." Real World Data Science, February 14, 2023. [URL](https://realworlddatascience.net/news-and-views/editors-blog/posts/2023/02/14/digital-skills.html)
+:::
+:::
+:::
