--- a/viewpoints/editors-blog/posts/2023/03/15/AI-screening.qmd
+++ b/viewpoints/editors-blog/posts/2023/03/15/AI-screening.qmd
@@ -14,6 +14,8 @@ bibliography: refs.bib
 citation-location: margin
 image: images/teacher-marking-homework.png
 image-alt: A teacher is marking homework and trying to decide whether a written piece of text has been created by a student or by a large language model, digital art. Created by DALL·E, prompt by Real World Data Science.
+aliases: 
+  - /news-and-views/editors-blog/posts/2023/03/15/AI-screening.html
 ---
 When ChatGPT launched in December 2022, it wasn't long before users highlighted [the tool's potential as a homework aid](https://news.sky.com/story/the-ultimate-homework-cheat-how-teachers-are-facing-up-to-chatgpt-12780601). Pop an essay question into ChatGPT's prompt box or feed your creative writing task to the AI instead, *et voila* -- your work is done!
 
@@ -123,7 +125,7 @@ Looked at in this way, Matthews says, "You already have to be pretty convinced o
 So, here's a question that teachers will be asking if they are worried about ChatGPT-generated homework: "Has the piece of text I'm marking been written by AI?" If those same teachers use the OpenAI classifier to try to answer that question, they will no doubt expect that something classified as "likely AI-written" is more likely to be AI-written than not. However, as it stands now -- and as our examples above have shown -- users can't be confident that's the case. In education terms, this particular 'test' is a long way from scoring top marks.
 
 ::: {.article-btn}
-[Back to Editors' blog](/news-and-views/editors-blog/index.qmd)
+[Back to Editors' blog](/viewpoints/editors-blog/index.qmd)
 :::
 
 
