ed blog 2022 repointed

--- a/viewpoints/editors-blog/posts/2022/12/09/A-chat-with-ChatGPT.qmd
+++ b/viewpoints/editors-blog/posts/2022/12/09/A-chat-with-ChatGPT.qmd
@@ -15,7 +15,7 @@ aliases:
   - /news-and-views/editors-blog/posts/2022-12-09-LLM-news/A-chat-with-ChatGPT.html 
 ---
 ::: {.column-margin}
-###### Screenshots
+##### Screenshots
 [![Part 1](images/chatgpt1.png){fig-alt="A screenshot of an exchange between Real World Data Science editor Brian Tarran and ChatGPT."}](images/chatgpt1.png)
 
 [![Part 2](images/chatgpt2.png){fig-alt="A screenshot of an exchange between Real World Data Science editor Brian Tarran and ChatGPT."}](images/chatgpt2.png)
@@ -83,7 +83,24 @@ However, it is important to keep in mind that the accuracy and completeness of m
 
 **ChatGPT:** We were chatting about large language models and their potential uses and limitations. Specifically, we discussed the possibility that advances in large language models could ultimately lead to the development of artificial general intelligence, and we discussed the reasons why the outputs of these models might not always make sense. We also discussed the potential uses of large language models, such as generating text that resembles human language and providing a starting point for further research into natural language processing and artificial intelligence.
 
-###### **&larr; Back to [Editors' blog](/news-and-views/editors-blog/index.qmd)**
+::: {.article-btn}
+[Back to Editors' blog](/viewpoints/editors-blog/index.qmd)
+:::
 
----
-<p xmlns:cc="http://creativecommons.org/ns#" >This work is licensed under <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a></p>
+
+::: {.further-info}
+::: grid
+::: {.g-col-12 .g-col-md-6}
+Copyright and licence
+: &copy; 2022 Royal Statistical Society
+
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This work is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>, except where otherwise noted.
+
+:::
+
+::: {.g-col-12 .g-col-md-6}
+How to cite
+: Tarran, Brian. 2022. "A chat with ChatGPT." Real World Data Science, December, 9 2022. [URL](https://realworlddatascience.net/news-and-views/editors-blog/posts/2022-12-09-LLM-news/A-chat-with-ChatGPT.html)
+:::
+:::
+:::
