--- a/viewpoints/editors-blog/posts/2022/12/01/themes.qmd
+++ b/viewpoints/editors-blog/posts/2022/12/01/themes.qmd
@@ -58,7 +58,24 @@ On Real World Data Science, we want to create [a space](/news-and-views/index.qm
 
 So, if you have thoughts to share, a question you want to ask, or a new paper you want to talk about (one you’ve not written yourself, of course!), [let us know](/contact.qmd).
 
-###### **&larr; Back to [Editors' blog](/news-and-views/editors-blog/index.qmd)**
+::: {.article-btn}
+[Back to Editors' blog](/viewpoints/editors-blog/index.qmd)
+:::
 
----
-<p xmlns:cc="http://creativecommons.org/ns#" >This work is licensed under <a href="http://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-SA 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1"></a></p>
+
+::: {.further-info}
+::: grid
+::: {.g-col-12 .g-col-md-6}
+Copyright and licence
+: &copy; 2022 Royal Statistical Society
+
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This work is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>, except where otherwise noted.
+
+:::
+
+::: {.g-col-12 .g-col-md-6}
+How to cite
+: Tarran, Brian. 2022. "Four themes for potential contributors to think about." Real World Data Science, December, 1 2022. [URL](https://realworlddatascience.net/news-and-views/editors-blog/posts/2022-12-01-themes/themes.html)
+:::
+:::
+:::
