--- a/viewpoints/editors-blog/posts/2022/12/13/dsb-launch.qmd
+++ b/viewpoints/editors-blog/posts/2022/12/13/dsb-launch.qmd
@@ -12,7 +12,7 @@ toc: true
 image: images/datasciencebites-logo.png
 image-alt: DataScienceBites logo. A dark grey circle with bite marks cut out. Overlaid text says, Import grad_students as writers, import new_research_papers as nrp, print(writers + nrp) and the title DataScienceBites.
 aliases: 
-  - /news-and-views/editors-blog/posts/2022-12-13-dsb-launch/dsb-launch.html   
+  - /news-and-views/editors-blog/posts/2022-12-13-dsb-launch/dsb-launch.html  
 ---
 I’m absolutely thrilled today to announce the launch of our new blog, [DataScienceBites](/news-and-views/datasciencebites/index.qmd). The blog is not only a new addition to Real World Data Science, but also the latest proud member of the ScienceBites family of sites. 
 
@@ -29,8 +29,23 @@ To everyone else, we do hope you enjoy sinking your teeth into the data science 
 ![](images/datasciencebites-logo.png){fig-alt="DataScienceBites logo. A dark grey circle with bite marks cut out. Overlaid text says, Import grad_students as writers, import new_research_papers as nrp, print(writers + nrp) and the title DataScienceBites." width="500" fig-align="center"}
 
 ::: {.article-btn}
-[Back to Editors' blog](/news-and-views/editors-blog/index.qmd)
+[Back to Editors' blog](/viewpoints/editors-blog/index.qmd)
 :::
 
----
-<p xmlns:cc="http://creativecommons.org/ns#" >This work is licensed under <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a></p>
+
+::: {.further-info}
+::: grid
+::: {.g-col-12 .g-col-md-6}
+Copyright and licence
+: &copy; 2022 Royal Statistical Society
+
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This work is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>, except where otherwise noted.
+
+:::
+
+::: {.g-col-12 .g-col-md-6}
+How to cite
+: Tarran, Brian. 2022. "Sink your teeth into some data science papers with our brand new blog." Real World Data Science, December, 13 2022. [URL](https://realworlddatascience.net/news-and-views/editors-blog/posts/2022-12-13-dsb-launch/dsb-launch.html)
+:::
+:::
+:::
