dsb footer updated

--- a/ideas/datasciencebites/posts/2023/01/24/pulling-patterns.qmd
+++ b/ideas/datasciencebites/posts/2023/01/24/pulling-patterns.qmd
@@ -54,10 +54,20 @@ To demonstrate the power of their method, Baron and Ménard apply The Sequencer 
 
 But, what about new patterns? The team has already applied The Sequencer to mine seismographic data and discover previously unknown formations deep within the earth, at the boundary between the core and [mantle](https://en.wikipedia.org/wiki/Core%E2%80%93mantle_boundary). By sequencing the seismic waves, they realized that the main trend was the amplitude of diffraction off of these structures, which they were then able to localize beneath Hawaii and the Marquesas (DOI: [10.1126/science.aba8972](https://doi.org/10.1126/science.aba8972){aria-label="Link to article, 'Sequencing seismograms: A panoptic view of scattering in the core-mantle boundary region'"}).
 
-For more demonstrations and discoveries, or even to upload your own data for sequencing, [check out the project website](http://sequencer.org/). Data sleuths can also download all of the code directly from [GitHub](https://github.com/dalya/Sequencer) and sequence to their hearts’ content! 
+For more demonstrations and discoveries, or even to upload your own data for sequencing, [check out the project website](http://sequencer.org/). Data sleuths can also download all of the code directly from [GitHub](https://github.com/dalya/Sequencer) and sequence to their hearts’ content!
+\
+\
 
-## About the author
-**Andrew Saydjari**  is a graduate student in physics at Harvard researching the spatial and chemical variations of dust in the interstellar medium. He favors using interpretable statistics and large photometric and spectroscopic surveys.
+::: {.further-info}
+::: grid
+::: {.g-col-12 .g-col-md-6}
+About the author
+: **Andrew Saydjari**  is a graduate student in physics at Harvard researching the spatial and chemical variations of dust in the interstellar medium. He favors using interpretable statistics and large photometric and spectroscopic surveys.
+:::
 
-## About DataScienceBites
-[**DataScienceBites**](/news-and-views/datasciencebites/index.qmd) is written by graduate students and early career researchers in data science (and related subjects) at universities throughout the world, as well as industry researchers. We publish digestible, engaging summaries of interesting new pre-print and peer-reviewed publications in the data science space, with the goal of making scientific papers more accessible. Find out how to [become a contributor](/contributor-docs/datasciencebites.qmd).
+::: {.g-col-12 .g-col-md-6}
+About DataScienceBites
+: [**DataScienceBites**](/ideas/datasciencebites/index.qmd) is written by graduate students and early career researchers in data science (and related subjects) at universities throughout the world, as well as industry researchers. We publish digestible, engaging summaries of interesting new pre-print and peer-reviewed publications in the data science space, with the goal of making scientific papers more accessible. Find out how to [become a contributor](/contributor-docs/datasciencebites.qmd).
+:::
+:::
+:::
