--- a/ideas/datasciencebites/posts/2022/12/13/ridesharing.qmd
+++ b/ideas/datasciencebites/posts/2022/12/13/ridesharing.qmd
@@ -51,8 +51,16 @@ Overall, the framework introduced allows for handling of carryover effects, is c
 
 {{< video https://www.youtube.com/embed/Zor1CmRyycw >}}
 
-## About the author
-**Brian King** is a PhD candidate in the Department of Statistics at Rice University and a current NSF Graduate Research Fellow, with research focused on Bayesian modeling and forecasting for time series of counts. Prior to Rice, he graduated from Baylor University with a B.S. in Mathematics and Statistics alongside a secondary major in Spanish and a minor in Computer Science.
+::: {.further-info}
+::: grid
+::: {.g-col-12 .g-col-md-6}
+About the author
+: **Brian King** is a PhD candidate in the Department of Statistics at Rice University and a current NSF Graduate Research Fellow, with research focused on Bayesian modeling and forecasting for time series of counts. Prior to Rice, he graduated from Baylor University with a B.S. in Mathematics and Statistics alongside a secondary major in Spanish and a minor in Computer Science.
+:::
 
-## About DataScienceBites
-[**DataScienceBites**](/news-and-views/datasciencebites/index.qmd) is written by graduate students and early career researchers in data science (and related subjects) at universities throughout the world, as well as industry researchers. We publish digestible, engaging summaries of interesting new pre-print and peer-reviewed publications in the data science space, with the goal of making scientific papers more accessible. Find out how to [become a contributor](/contributor-docs/datasciencebites.qmd).
+::: {.g-col-12 .g-col-md-6}
+About DataScienceBites
+: [**DataScienceBites**](/ideas/datasciencebites/index.qmd) is written by graduate students and early career researchers in data science (and related subjects) at universities throughout the world, as well as industry researchers. We publish digestible, engaging summaries of interesting new pre-print and peer-reviewed publications in the data science space, with the goal of making scientific papers more accessible. Find out how to [become a contributor](/contributor-docs/datasciencebites.qmd).
+:::
+:::
+:::
