fixed dead links

--- a/viewpoints/editors-blog/posts/2022/12/01/themes.qmd
+++ b/viewpoints/editors-blog/posts/2022/12/01/themes.qmd
@@ -54,7 +54,7 @@ We are also keen to explore the **origins of modern data science techniques**, i
 
 Data science is such a fast-moving, fast-developing field that it’s difficult to stay on top of all the latest news and developments. But racing to keep up can be counterproductive. It leaves little time to sit back and reflect on what the genuinely important new developments are, and what these might mean for data science longer term. 
 
-On Real World Data Science, we want to create [a space](/news-and-views/index.qmd) for people to have these conversations – to step outside the news hype cycle, to ask big questions about what’s happening in the field, and to discuss new papers and ideas that otherwise might be lost amid the daily rush and noise. 
+On Real World Data Science, we want to create [a space](/viewpoints/index.qmd) for people to have these conversations – to step outside the news hype cycle, to ask big questions about what’s happening in the field, and to discuss new papers and ideas that otherwise might be lost amid the daily rush and noise. 
 
 So, if you have thoughts to share, a question you want to ask, or a new paper you want to talk about (one you’ve not written yourself, of course!), [let us know](/contact.qmd).
 
