--- a/viewpoints/editors-blog/posts/2022/12/09/LLM-news.qmd
+++ b/viewpoints/editors-blog/posts/2022/12/09/LLM-news.qmd
@@ -14,11 +14,11 @@ image-alt: An image created by the Stable Diffusion 2.1 Demo. The model was aske
 aliases: 
   - /news-and-views/editors-blog/posts/2022-12-09-LLM-news/LLM-news.html
 ---
-Two weeks ago, I posted a [Q&A with our editorial board member Detlef Nauck about large language models](/news-and-views/editors-blog/posts/2022-11-23-LLMs-content-warning/LLM-content-warning.qmd) (LLMs), their drawbacks and risks. And since then we’ve had several big new announcements in this space. First came news from Meta (the company that owns Facebook) about [Galactica, an LLM trained on scientific papers](https://galactica.org/mission/). This was followed by another Meta announcement, about [Cicero](https://ai.facebook.com/research/cicero/), an AI agent that is apparently very good at playing the game Diplomacy. And then came perhaps the biggest launch of them all: [ChatGPT from OpenAI](https://openai.com/blog/chatgpt/), an LLM-based chatbot that millions of people have already started talking to. 
+Two weeks ago, I posted a [Q&A with our editorial board member Detlef Nauck about large language models](/news-and-views/editors-blog/posts/2022-11-23-LLMs-content-warning/LLM-content-warning.html) (LLMs), their drawbacks and risks. And since then we’ve had several big new announcements in this space. First came news from Meta (the company that owns Facebook) about [Galactica, an LLM trained on scientific papers](https://galactica.org/mission/). This was followed by another Meta announcement, about [Cicero](https://ai.facebook.com/research/cicero/), an AI agent that is apparently very good at playing the game Diplomacy. And then came perhaps the biggest launch of them all: [ChatGPT from OpenAI](https://openai.com/blog/chatgpt/), an LLM-based chatbot that millions of people have already started talking to. 
 
 Following these stories and the surrounding commentaries has been something of a rollercoaster ride. ChatGPT, for example, has been greeted in some quarters as if artificial general intelligence has finally arrived, while others point out that – impressive though it is – the technology is as prone to spout nonsense as all LLMs before it (including Galactica, [the demo of which was quickly taken offline](https://thenextweb.com/news/meta-takes-new-ai-system-offline-because-twitter-users-mean) for this reason). Cicero, meanwhile, has impressed with its ability to play a game that is (a) very difficult and (b) relies on dialogue, cooperation, and negotiation between players. It blends a language model with planning and reinforcement learning algorithms, meaning that it is trained not only on the rules of the game and how to win, but how to communicate with other players to achieve victory. 
 
-To help me make sense of all these new developments, and the myriad implications, I reached out to [Harvey Lewis](/news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd), another of our editorial board members and a partner in EY’s tax and law practice. 
+To help me make sense of all these new developments, and the myriad implications, I reached out to [Harvey Lewis](/news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.html), another of our editorial board members and a partner in EY’s tax and law practice. 
 
 ## Q&A 
 **Harvey, when I spoke with Detlef, he mentioned that one of the reasons we're seeing investment in LLMs is because there's this belief that they are somehow the route to artificial general intelligence (AGI). And there were headlines in some places that would perhaps convince a casual reader that AGI had been achieved following the release of ChatGPT. For example, the Telegraph described it as a [“scarily intelligent robot who can do your job better than you”](https://www.telegraph.co.uk/business/2022/12/05/meet-scarily-intelligent-robot-who-can-do-job-better/). What do you make of all that?** 
@@ -82,4 +82,4 @@ How to cite
 :::
 :::
 
-[^1]: I also had a conversation with ChatGPT. [Read the transcript](/news-and-views/editors-blog/posts/2022-12-09-LLM-news/A-chat-with-ChatGPT.qmd).
+[^1]: I also had a conversation with ChatGPT. [Read the transcript](/news-and-views/editors-blog/posts/2022-12-09-LLM-news/A-chat-with-ChatGPT.html).
