--- a/viewpoints/editors-blog/posts/2023/02/14/digital-skills.qmd
+++ b/viewpoints/editors-blog/posts/2023/02/14/digital-skills.qmd
@@ -31,7 +31,7 @@ The committee meeting was sponsored by the Institution of Engineering and Techno
 
 Kicking off the discussion was Graham Herries, an engineering director and chair of the IET’s Innovation and Skills Panel, who drew attention to the harms that the digital skills gap is reportedly having. Of those respondents who identified skills gaps in their own organisations, 49% pointed to a reduction in productivity, while 35% said skills shortages were restricting company growth.  
 
-As the hot topic of the day, [ChatGPT inevitably came up during the discussion](/news-and-views/editors-blog/posts/2023/01/27/talking-chatgpt.qmd). Herries sees it as a disruptive force, and 36% of all respondents believe artificial intelligence (AI) skills will be important for their engineers to have within five years (24% say they are important *now*). But AI skills are important for non-engineers too, argued Herries, as he pointed to stirrings in the creative industries caused by generative art tools such as [Stable Diffusion](https://stability.ai/blog/stable-diffusion-public-release).  
+As the hot topic of the day, [ChatGPT inevitably came up during the discussion](/news-and-views/editors-blog/posts/2023/01/27/talking-chatgpt.html). Herries sees it as a disruptive force, and 36% of all respondents believe artificial intelligence (AI) skills will be important for their engineers to have within five years (24% say they are important *now*). But AI skills are important for non-engineers too, argued Herries, as he pointed to stirrings in the creative industries caused by generative art tools such as [Stable Diffusion](https://stability.ai/blog/stable-diffusion-public-release).  
 
 Herries therefore puts AI skills under the broad umbrella of “digital skills”. But, to him, it’s not enough to simply be able to use AI technology; rather, users should know enough to be able to ask the right questions about the provenance of the data used to train the AI, its quality and biases, etc. This was a point developed further by Yvonne Baker, an engineer and the CEO of STEM Learning. Baker talked about digital skills as being both the ability to use digital technology and also to understand its limitations. Yet another perspective was offered by Rab Scott, director of industrial digitalisation at the University of Sheffield's Advanced Manufacturing Research Centre. Scott defined digital skills in the context of [quality control systems in industry 4.0](https://rss.onlinelibrary.wiley.com/doi/10.1111/1740-9713.01523): it’s about knowing how and where to place a sensor to collect data about the manufacturing process, to feed that data into a data collection system, analyse the data for insights, and use those insights to inform decision-making.
 
