--- a/viewpoints/editors-blog/posts/2023/01/27/talking-chatgpt.qmd
+++ b/viewpoints/editors-blog/posts/2023/01/27/talking-chatgpt.qmd
@@ -26,7 +26,7 @@ There are still major challenges to overcome, says Nauck - not least the fact th
 
 Check out the full conversation below or on [YouTube](https://www.youtube.com/watch?v=AWxfSmcgPbo).  
 
-Detlef Nauck is a member of the [Real World Data Science editorial board](/news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd) and head of AI and data science research for BT's Applied Research Division.
+Detlef Nauck is a member of the [Real World Data Science editorial board](/news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.html) and head of AI and data science research for BT's Applied Research Division.
 
 {{< video https://www.youtube.com/embed/AWxfSmcgPbo >}}
 
