remove index pages from search

--- a/careers/index.qmd
+++ b/careers/index.qmd
@@ -1,7 +1,8 @@
 ---
 pagetitle: Careers | Real World Data Science
 title: Careers
-subtitle: Insight, advice and guidance on how to succeed in data science 
+subtitle: Insight, advice and guidance on how to succeed in data science
+search: false 
 # listing:
 #   contents: 
 #   - editors-blog
