--- a/index.qmd
+++ b/index.qmd
@@ -4,6 +4,7 @@ page-layout: custom
 section-divs: false
 editor: source
 sidebar: false
+search: false
 listing:
   - id: latest-content
     contents: 
