--- a/latest-content.qmd
+++ b/latest-content.qmd
@@ -4,6 +4,7 @@ title: Latest content
 subtitle: A panoramic view of Real World Data Science 
 title-block-banner: true
 sidebar: false
+search: false
 page-layout: article  
 listing:
   contents: 
