--- a/viewpoints/editors-blog/index.qmd
+++ b/viewpoints/editors-blog/index.qmd
@@ -2,6 +2,7 @@
 pagetitle: Editors' Blog | Viewpoints | Real World Data Science
 title: Editors' blog
 subtitle: News, updates, and discussions from the Editorial Board
+search: false
 listing:
   contents: posts
   sort: "date desc"
