--- a/viewpoints/interviews/index.qmd
+++ b/viewpoints/interviews/index.qmd
@@ -2,6 +2,7 @@
 pagetitle: Interviews | Viewpoints | Real World Data Science
 title: Interviews
 subtitle: Deep dives with data scientists on hot topics and burning issues
+search: false
 listing:
   contents: posts
   sort: "date desc"
