fixed contrib links in footer

--- a/index.qmd
+++ b/index.qmd
@@ -240,9 +240,9 @@ Anna Bargagliotti on the US Data Science and Literacy Act
 :::
 ::: {.g-col-12 .g-col-md-2}
 ### Contribute
-[Call for contributions](\contributor-docs\call-for-contributions.qmd)\
-[Contributor guidelines](\contributor-docs\contributor-guidelines.qmd)\
-[Style guide](\contributor-docs\style-guide.qmd)
+[Call for contributions](/contributor-docs/call-for-contributions.qmd)\
+[Contributor guidelines](/contributor-docs/contributor-guidelines.qmd)\
+[Style guide](/contributor-docs/style-guide.qmd)
 :::
 ::: {.g-col-12 .g-col-md-2}
 ### Follow us
