--- a/viewpoints/newsletter/index.qmd
+++ b/viewpoints/newsletter/index.qmd
@@ -14,6 +14,8 @@ listing:
 toc: false
 sidebar: false
 comments: false
+aliases: 
+  - /news-and-views/newsletter/index.html
 ---
 
 ## Newsletter archive
