added some more missing aliases

--- a/ideas/datasciencebites/index.qmd
+++ b/ideas/datasciencebites/index.qmd
@@ -13,5 +13,5 @@ listing:
   page-size: 12
 comments: false
 aliases: 
-  - /news-and-views/datasciencebites/index.qmd
+  - /news-and-views/datasciencebites/index.html
 ---
