added image and description to site index

--- a/index.qmd
+++ b/index.qmd
@@ -5,6 +5,9 @@ section-divs: false
 editor: source
 sidebar: false
 search: false
+description: | 
+  A showcase for data science in action, brought to you by the Royal Statistical Society
+image: images/rwds-logo-150px.png
 listing:
   - id: latest-content
     contents: 
