--- a/viewpoints/editors-blog/posts/2023/03/15/AI-screening.qmd
+++ b/viewpoints/editors-blog/posts/2023/03/15/AI-screening.qmd
@@ -1,7 +1,7 @@
 ---
 title: "OpenAI's text classifier won't calm fears about AI-written homework" 
 description: |
-  Educators are worried about ChatGPT being using by students for homework assignments, so OpenAI has released a tool to classify whether text is human- or AI-written. But relying on the classifier's results is ill-advised, as some basic statistics shows.  
+  Educators are worried about ChatGPT being used by students for homework assignments, so OpenAI has released a tool to classify whether text is human- or AI-written. But relying on the classifier's results is ill-advised, as some basic statistics shows.  
 categories:
   - AI
   - Large language models
