--- a/index.qmd
+++ b/index.qmd
@@ -116,7 +116,7 @@ toc: false
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
 ## OpenAI’s text classifier won’t calm fears about AI-written homework
-Educators are worried about ChatGPT being using by students for homework assignments, so OpenAI has released a tool to classify whether text is human- or AI-written. But relying on the classifier’s results is ill-advised, as some basic statistics shows.
+Educators are worried about ChatGPT being used by students for homework assignments, so OpenAI has released a tool to classify whether text is human- or AI-written. But relying on the classifier’s results is ill-advised, as some basic statistics shows.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
 ![](viewpoints/editors-blog/posts/2023/03/15/images/teacher-marking-homework.png)
